--- a/stats.html
+++ b/stats.html
@@ -1,1 +1,19 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Arcade Analytics</title>
+    <style>
+        body { background: #0d1117; color: #fff; font-family: sans-serif; text-align: center; padding: 100px; }
+        .box { background: #161b22; padding: 40px; border-radius: 15px; border: 1px solid #30363d; display: inline-block; }
+    </style>
+</head>
+<body>
+    <h1>📊 Viewer Analytics</h1>
+    <p>Total project hits</p>
+    <div class="box">
+        <img src="https://count.getloli.com/get/@bob-mongle-arcade?theme=rule34">
+    </div>
+    <br><br>
+    <a href="index.html" style="color:#58a6ff">Back to Games</a>
+</body>
+</html>
