--- a/index.html
+++ b/index.html
@@ -3,83 +3,80 @@
 <head>
     <title>Google Docs</title>
     <style>
-        :root { --bg: #0b0f1a; --card: #161b22; --accent: #58a6ff; --text: #c9d1d9; --proxy: #ff7b72; }
-        body { background: var(--bg); color: var(--text); font-family: 'Segoe UI', sans-serif; margin: 0; padding: 0; overflow-x: hidden; }
-        .navbar { background: var(--card); padding: 15px 25px; display: flex; justify-content: space-between; align-items: center; border-bottom: 1px solid #30363d; position: sticky; top: 0; z-index: 1000; }
+        :root { --bg: #0d1117; --card: #161b22; --accent: #58a6ff; --text: #c9d1d9; }
+        body { background: var(--bg); color: var(--text); font-family: sans-serif; margin: 0; padding: 0; }
+        .navbar { background: #161b22; padding: 15px 25px; display: flex; justify-content: space-between; align-items: center; border-bottom: 1px solid #30363d; }
         .container { padding: 30px; max-width: 1200px; margin: 0 auto; }
-        .section-title { text-align: left; margin: 40px 0 15px; padding-bottom: 10px; border-bottom: 1px solid #30363d; color: var(--accent); font-size: 1.6rem; font-weight: bold; }
-        .grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(180px, 1fr)); gap: 20px; }
-        .game-card { display: flex; flex-direction: column; align-items: center; justify-content: center; background: var(--card); padding: 30px 10px; border-radius: 15px; border: 2px solid #30363d; cursor: pointer; transition: 0.2s; }
-        .game-card:hover { border-color: var(--accent); transform: translateY(-5px); background: #1c2128; box-shadow: 0 10px 20px rgba(0,0,0,0.4); }
-        .game-card .emoji { font-size: 50px; margin-bottom: 10px; }
-        .game-card .name { font-weight: bold; font-size: 14px; text-align: center; color: white; }
-        .btn-ui { background: #21262d; border: 1px solid #30363d; color: white; padding: 10px 18px; border-radius: 8px; cursor: pointer; font-weight: bold; text-decoration: none; font-size: 14px; }
-        #search { padding: 10px; border-radius: 8px; border: 1px solid #30363d; background: #0d1117; color: white; width: 180px; margin-right: 10px; }
-        /* Secret Admin Button */
-        .admin-lock { position: fixed; bottom: 15px; right: 15px; opacity: 0.3; transition: 0.3s; text-decoration: none; font-size: 20px; }
-        .admin-lock:hover { opacity: 1; }
+        .grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(160px, 1fr)); gap: 20px; }
+        .game-card { background: var(--card); padding: 20px; border-radius: 12px; border: 1px solid #30363d; text-align: center; cursor: pointer; transition: 0.2s; }
+        .game-card:hover { border-color: var(--accent); transform: translateY(-5px); }
+        .game-emoji { font-size: 50px; margin-bottom: 10px; display: block; }
+        .game-name { font-weight: bold; font-size: 14px; }
+        .btn { background: #21262d; border: 1px solid #30363d; color: white; padding: 8px 15px; border-radius: 6px; cursor: pointer; }
+        .footer-nav { position: fixed; bottom: 10px; right: 15px; opacity: 0.05; transition: 0.3s; }
+        .footer-nav:hover { opacity: 1; }
+        .footer-nav a { color: #8b949e; text-decoration: none; font-size: 12px; margin-left: 10px; }
     </style>
 </head>
 <body>
     <div class="navbar">
-        <div id="clock" style="font-family:monospace; color:var(--accent); font-size: 1.1rem;">00:00:00</div>
-        <div>
-            <input type="text" id="search" placeholder="Search..." onkeyup="filter()">
-            <button class="btn-ui" onclick="autoScan()">🔄 Refresh</button>
-            <button class="btn-ui" onclick="panic()" style="color:#ff7b72; margin-left:5px;">🛑 Panic</button>
+        <div id="clock" style="font-family:monospace;">00:00:00</div>
+        <div style="display:flex; gap:10px;">
+            <button class="btn" onclick="autoScan()">🔄 Reload</button>
+            <button class="btn" onclick="panic()" style="background:#da3633;">Panic</button>
         </div>
     </div>
+
     <div class="container">
-        <h2 class="section-title">🕹️ Games</h2>
-        <div id="gameGrid" class="grid">Scanning...</div>
-        <h2 class="section-title" style="color:var(--proxy)">🌐 Utilities</h2>
+        <h2 style="color:var(--accent)">🎮 Games</h2>
+        <div id="gameGrid" class="grid"></div>
+        <h2 style="color:#ff7b72; margin-top:40px;">🌐 Utilities</h2>
         <div id="proxyGrid" class="grid"></div>
     </div>
-    <a href="wiki.html" class="admin-lock">⚙️</a>
+
+    <div class="footer-nav">
+        <a href="stats.html">📊 Viewer Stats</a>
+        <a href="wiki.html">⚙️ Admin Settings</a>
+    </div>
+
     <script>
-        const GITHUB_USER = "bob154526-hue"; const GITHUB_REPO = "Mongle";
-        let customIcons = JSON.parse(localStorage.getItem('mongleIcons')) || {};
+        const USER = "bob154526-hue"; const REPO = "Mongle";
+        
+        // Tab Cloaking
+        document.title = localStorage.getItem('tabTitle') || "Google Docs";
+        let link = document.querySelector("link[rel*='icon']") || document.createElement('link');
+        link.href = localStorage.getItem('tabIcon') || "https://ssl.gstatic.com/docs/documents/images/kix-favicon-2023q4.ico";
+        document.getElementsByTagName('head')[0].appendChild(link);
+
         function updateClock() { document.getElementById('clock').innerText = new Date().toLocaleTimeString(); }
         setInterval(updateClock, 1000); updateClock();
-        function panic() { window.location.replace('https://classroom.google.com'); }
-        function getSmartIcon(name, isProxy) {
-            const n = name.toLowerCase(); if (customIcons[name]) return customIcons[name]; if (isProxy) return '🌐';
-            if (n.includes('freddy')) return '🐻'; if (n.includes('minecraft')) return '⛏️'; if (n.includes('knight')) return '⚔️';
-            if (n.includes('roulette')) return '🎲'; if (n.includes('terraria')) return '🌳'; if (n.includes('ultrakill')) return '🤖';
-            if (n.includes('stick')) return '🤺'; if (n.includes('people')) return '🧍'; if (n.includes('school')) return '🏫';
-            return '🎮';
-        }
-        function openGame(url) {
-            const win = window.open('about:blank', '_blank');
-            if (win) {
-                const iframe = win.document.createElement('iframe');
-                iframe.style = "position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;";
-                iframe.src = window.location.origin + window.location.pathname.replace('index.html', '') + url;
-                win.document.body.appendChild(iframe);
-            }
-        }
-        async function autoScan() {
-            try {
-                const response = await fetch(`https://api.github.com/repos/${GITHUB_USER}/${GITHUB_REPO}/contents/`);
-                const files = await response.json();
-                const gameGrid = document.getElementById('gameGrid'); const proxyGrid = document.getElementById('proxyGrid');
-                gameGrid.innerHTML = ""; proxyGrid.innerHTML = "";
-                files.forEach(file => {
-                    if (file.name.endsWith('.html') && !['index.html', 'wiki.html'].includes(file.name)) {
-                        const isProxy = file.name.toLowerCase().includes('proxy') || file.name.toLowerCase().includes('soundboard');
-                        const card = document.createElement('div'); card.className = 'game-card';
-                        card.onclick = () => openGame(file.name);
-                        card.innerHTML = `<div class="emoji">${getSmartIcon(file.name, isProxy)}</div><div class="name">${file.name.replace('.html', '')}</div>`;
-                        if (isProxy) proxyGrid.appendChild(card); else gameGrid.appendChild(card);
-                    }
-                });
-            } catch (e) { console.error(e); }
-        }
-        function filter() {
-            let q = document.getElementById('search').value.toLowerCase();
-            document.querySelectorAll('.game-card').forEach(c => c.style.display = c.innerText.toLowerCase().includes(q) ? "" : "none");
-        }
+
+        function panic() { window.location.replace(localStorage.getItem('panicUrl') || 'https://classroom.google.com'); }
         window.onkeydown = (e) => { if (e.key === "Escape") panic(); };
+
+        async function autoScan() {
+            const res = await fetch(`https://api.github.com/repos/${USER}/${REPO}/contents/`);
+            const files = await res.json();
+            const htmlFiles = files.filter(f => f.name.endsWith('.html') && !['index.html', 'wiki.html', 'stats.html'].includes(f.name));
+            const iData = JSON.parse(localStorage.getItem('mongleIcons')) || {};
+
+            const gGrid = document.getElementById('gameGrid');
+            const pGrid = document.getElementById('proxyGrid');
+            gGrid.innerHTML = ""; pGrid.innerHTML = "";
+
+            htmlFiles.forEach(file => {
+                const name = file.name.replace('.html', '');
+                const isUtil = name.toLowerCase().includes('proxy') || name.toLowerCase().includes('soundboard');
+                const card = document.createElement('div');
+                card.className = 'game-card';
+                card.onclick = () => {
+                    const win = window.open('about:blank', '_blank');
+                    win.document.body.innerHTML = `<iframe src="${window.location.origin + window.location.pathname.replace('index.html', '') + file.name}" style="position:fixed; top:0; left:0; width:100%; height:100%; border:none;"></iframe>`;
+                };
+                card.innerHTML = `<span class="game-emoji">${iData[file.name] || (isUtil ? '🌐' : '🎮')}</span><div class="game-name">${name}</div>`;
+                if (isUtil) pGrid.appendChild(card); else gGrid.appendChild(card);
+            });
+        }
         autoScan();
     </script>
 </body>
