--- a/wiki.html
+++ b/wiki.html
@@ -1,42 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Admin</title>
+    <title>Admin Hub</title>
     <style>
-        body { background: #020617; color: white; font-family: sans-serif; padding: 40px; text-align: center; }
-        .box { background: #0f172a; border: 1px solid #334155; padding: 25px; border-radius: 15px; max-width: 450px; margin: auto; }
-        .btn { width: 100%; padding: 12px; margin: 8px 0; border: none; border-radius: 8px; cursor: pointer; font-weight: bold; color: white; background: #3b82f6; }
-        input { width: 80%; padding: 10px; margin: 10px 0; border-radius: 5px; border: 1px solid #333; background: #000; color: white; }
+        body { background: #020617; color: white; font-family: sans-serif; text-align: center; padding: 50px; }
+        .box { background: #0f172a; border: 1px solid #334155; padding: 30px; border-radius: 20px; max-width: 400px; margin: auto; }
+        .btn { width: 100%; padding: 15px; margin: 10px 0; border: none; border-radius: 10px; cursor: pointer; font-weight: bold; color: white; transition: 0.2s; }
+        .btn:active { transform: scale(0.98); }
     </style>
 </head>
 <body>
-
-    <div class="box" id="adminPanel" style="display:none;">
-        <h2 style="color:#ef4444">🛡️ SYSTEM OVERLORD</h2>
-        
-        <p>Set Auto-Lock Timer (Minutes):</p>
-        <input type="number" id="timerMins" placeholder="Minutes (e.g. 30)">
-        <button class="btn" onclick="setTimer()">START COUNTDOWN</button>
-        <button class="btn" style="background:#444" onclick="localStorage.removeItem('mLockUntil'); alert('Timer Cancelled')">CANCEL TIMER</button>
-
-        <hr style="margin:20px 0; border:0; border-top:1px solid #333;">
-        
-        <button class="btn" style="background:#ef4444" onclick="localStorage.setItem('mPrank', 'hacker'); alert('Hacker Mode Active!')">💻 HACKER PRANK</button>
-        <button class="btn" style="background:#ef4444" onclick="localStorage.setItem('mPrank', 'destruct'); alert('Death Screen Active!')">☢️ SELF DESTRUCT</button>
-        <button class="btn" style="background:#10b981" onclick="localStorage.setItem('mPrank', ''); localStorage.setItem('mMaint','false'); alert('System Restored!')">✨ CLEAR ALL</button>
+    <div class="box">
+        <h1 style="color:#3b82f6; margin-top: 0;">MONGLE CONTROL</h1>
+        <p style="color:#64748b;">Prank status: <b id="pStat">None</b></p>
+        <button class="btn" style="background:orange;" onclick="setPrank('hacker')">💻 ACTIVATE HACKER PRANK</button>
+        <button class="btn" style="background:red;" onclick="setPrank('destruct')">☢️ TRIGGER DESTRUCT SCREEN</button>
+        <button class="btn" style="background:gray;" onclick="setPrank('')">✨ CLEAR ALL PRANKS</button>
+        <br><br>
+        <a href="index.html" style="color: #3b82f6; text-decoration: none;">Return to Archive</a>
     </div>
 
     <script>
-        if(sessionStorage.getItem('mAuth') === 'mongle') {
-            document.getElementById('adminPanel').style.display = 'block';
-        }
-
-        function setTimer() {
-            const mins = document.getElementById('timerMins').value;
-            if(!mins) return;
-            const expire = Date.now() + (mins * 60000);
-            localStorage.setItem('mLockUntil', expire);
-            alert(`Site will lock in ${mins} minutes!`);
+        document.getElementById('pStat').innerText = localStorage.getItem('mPrank') || "None";
+        function setPrank(val) {
+            localStorage.setItem('mPrank', val);
+            document.getElementById('pStat').innerText = val || "None";
+            alert(val ? "System Armed!" : "System Cleared!");
         }
     </script>
 </body>
