--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Google Drive</title>
+    <title>Google urive</title>
     <link id="favicon" rel="icon" href="https://ssl.gstatic.com/images/branding/product/1x/drive_2020q4_32dp.png">
     <style>
         :root { --primary: #00ff41; --bg: #000500; --card: rgba(15, 15, 15, 0.95); --accent: #003b00; --gold: #ffd700; --spotlight: #00ccff; --hacked: #ff0000; }
